tests/NormalTests/paczka1/fuzzy1/71296963.err
Error in line 1: EDQz37ugTf S100 42,5
Error in line 4: wQ5jol A345 72,8
Error in line 8: wQ5jol S687 17,8
Error in line 18: OUiyJ4X S100 10,83
Error in line 15: 6aYCMp S100 52,4
Error in line 20: EDQz37ugTf A345 95,1
Error in line 25: EDQz37ugTf A256 23,7
Error in line 9: OUiyJ4X S100 3,1
Error in line 31: OUiyJ4X S687 69,8
Error in line 33: As2ohNFAO3 S100 18,6
